--- a/App6/App6/index.html
+++ b/App6/App6/index.html
@@ -104,7 +104,7 @@
     <div class="container">
         <div class="jumbotron">
             <h1>This is the Next Big Thing</h1>
-            <a href="#"><button class="#"<button class="btn btn-success">Button</button></a>
+            <button class="btn btn-success">New Button</button>
             <p>Sit back, relax, and enjoy the show</p>
         </div>
         <dl>
